Fixed some language specific issues.